force-app/main/default/objects/OpportunityContactRole/fields/IsSecondary__c.field-meta.xml
<CustomField>
    <fullName>IsSecondary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary</label>
    <type>Checkbox</type>
</CustomField>