force-app/main/default/objects/OpportunityContactRole/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <description>Only being utilized for Migration of data from Hemasphere to SF</description>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>