force-app/main/default/objects/OpportunityContactRole/fields/Receive_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Receive_Call_List__c</fullName>
    <formula>IF(ISPICKVAL(Role , &#39;Call List Recipient&#39;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receive Call List</label>
    <type>Checkbox</type>
</CustomField>