force-app/main/default/objects/OpportunityContactRole/validationRules/No_call_list_will_be_generated.validationRule-meta.xml
<ValidationRule>
    <fullName>No_call_list_will_be_generated</fullName>
    <active>false</active>
    <errorConditionFormula>IF((ISPICKVAL( Role , &#39;Call List Recipient&#39;))  
&amp;&amp; ( Opportunity.Drive_Date__c - TODAY() &lt;= 32) , true, false)</errorConditionFormula>
    <errorMessage>No call list will be generated due to request within 4.5 weeks</errorMessage>
</ValidationRule>